Update on Overleaf.

--- a/template.bib
+++ b/template.bib
@@ -1,17 +1,95 @@
-@book{Martin_1983,
-	title = {Human Brain Evolution in an Ecological Context},
-	publisher = {American Museum of Natural History},
-	author = {Martin, Robert D.},
-	year = {1983}
+@book{sys_bio_book,
+	title = {Systems Biology: Constraint-based Reconstruction and Analysis},
+	publisher = {Cambridge University Press},
+	author = {Palsson, BO.},
+	year = {2015}
 },
 
-@article{Rilling_Insel_1999,
-	title = {The primate neocortex in comparative perspective using magnetic resonance imaging},
-	volume = {37},
-	issn = {0047-2484},
-	number = {2},
-	journal = {Journal of Human Evolution},
-	author = {Rilling, James K. and Insel, Thomas R.},
-	year = {1999},
-	pages = {191--223}
+@article{breseq_paper,
+	title = {Identification of mutations in laboratory-evolved microbes from next-generation sequencing data using breseq},
+	issn = {1151},
+	journal = {Methods Mol. Biol},
+	author = {Deatherage, D.E., Barrick, J.E.},
+	year = {2014},
+	pages = {165--188}
+}
+
+@article{ASM:/content/journal/microbe/10.1128/microbe.6.69.1,
+   author = "Palsson, B",
+   title = "Adaptive Laboratory Evolution",
+   journal = "Microbe Magazine",
+   year = "",
+   url = "http://www.asmscience.org/content/journal/microbe/10.1128/microbe.6.69.1"
+}
+
+@ONLINE{Andrew:2010:Online,
+   author = "Andrews, S.",
+   title = "FastQC: a quality control tool for high throughput sequence data",
+   year =  {2010}
+   url = "http://www.bioinformatics.babraham.ac.uk/projects/fastqc"   
+}
+
+@ONLINE{FASTX-Toolkit,
+    author = {Lab, Hannon},
+    citeulike-article-id = {9103573},
+    citeulike-linkout-0 = {http://hannonlab.cshl.edu/fastx_toolkit/},
+    journal = {http://hannonlab.cshl.edu/fastx_toolkit/index.html},
+    keywords = {ebv, seq},
+    posted-at = {2011-04-06 05:16:38},
+    priority = {2},
+    title = {{FASTX Toolkit}},
+    url = {http://hannonlab.cshl.edu/fastx_toolkit/}
+}
+
+@article{10.1371/journal.pgen.1001186,
+    author = {Charusanti, Pep AND Conrad, Tom M. AND Knight, Eric M. AND Venkataraman, Karthik AND Fong, Nicole L. AND Xie, Bin AND Gao, Yuan AND Palsson, Bernhard},
+    journal = {PLoS Genet},
+    publisher = {Public Library of Science},
+    title = {Genetic Basis of Growth Adaptation of Escherichia coli after Deletion of pgi, a Major Metabolic Gene},
+    year = {2010},
+    month = {11},
+    volume = {6},
+    url = {http://dx.doi.org/10.1371%2Fjournal.pgen.1001186},
+    pages = {1-13},
+    number = {11},
+    doi = {10.1371/journal.pgen.1001186}
+}
+
+@Article{pmid25015645,
+   Author="Sandberg, T. E.  and Pedersen, M.  and LaCroix, R. A.  and Ebrahim, A.  and Bonde, M.  and Herrgard, M. J.  and Palsson, B. O.  and Sommer, M.  and Feist, A. M. ",
+   Title="{{E}volution of {E}scherichia coli to 42 °{C} and subsequent genetic engineering reveals adaptive mechanisms and novel mutations}",
+   Journal="Mol. Biol. Evol.",
+   Year="2014",
+   Volume="31",
+   Number="10",
+   Pages="2647--2662",
+   Month="Oct"
+}
+
+@Article{pmid26964043,
+   Author="Sandberg, T. E.  and Long, C. P.  and Gonzalez, J. E.  and Feist, A. M.  and Antoniewicz, M. R.  and Palsson, B. O. ",
+   Title="{{E}volution of {E}. coli on [{U}-13{C}]{G}lucose {R}eveals a {N}egligible {I}sotopic {I}nfluence on {M}etabolism and {P}hysiology}",
+   Journal="PLoS ONE",
+   Year="2016",
+   Volume="11",
+   Number="3",
+   Pages="e0151130"
+}
+
+@Article{pmid25304508,
+   Author="LaCroix, R. A.  and Sandberg, T. E.  and O'Brien, E. J.  and Utrilla, J.  and Ebrahim, A.  and Guzman, G. I.  and Szubin, R.  and Palsson, B. O.  and Feist, A. M. ",
+   Title="{{U}se of adaptive laboratory evolution to discover key mutations enabling rapid growth of {E}scherichia coli {K}-12 {M}{G}1655 on glucose minimal medium}",
+   Journal="Appl. Environ. Microbiol.",
+   Year="2015",
+   Volume="81",
+   Number="1",
+   Pages="17--30",
+   Month="Jan"
+}
+
+@PhdThesis{ryan_thesis,
+	title = "{Automation, Optimization, and Characterization of Adaptive Laboratory Evolution}",
+    author = "Ryan LaCroix",
+    school = "University of California, San Diego",
+    year = "2016",
 }
