--- a/template_frontmatter.tex
+++ b/template_frontmatter.tex
@@ -11,9 +11,9 @@
 
 % No symbols, formulas, superscripts, or Greek letters are allowed
 % in your title.
-\title{The Title Of The {\doctype}}
+\title{ALE Analytics: A Software Pipeline and Web Platform for the Analysis of Microbial Genomic Data from Adaptive Laboratory Evolution Experiments}
 
-\author{Your Name Here}
+\author{Patrick Phaneuf}
 \degreeyear{\the\year}
 \campus{San Diego}  % used as: University of California, \campus
 
@@ -21,10 +21,10 @@
 % Master's Degree theses will NOT be formatted properly with this file.
 \degreetitle{\thedegree}
 
-\field{Mathematics}
+\field{Computer Science and Engineering}
 % \specialization{Anthropogeny}  % If you have a specialization, add it here
 
-\chair{Professor Chair Master}
+\chair{Professor Bernhard Palsson}
 % Uncomment the next line iff you have a Co-Chair
 % \cochair{Professor Cochair Semimaster}
 %
@@ -33,9 +33,8 @@
 
 %  The rest of the committee members  must be alphabetized by last name.
 \othermembers{
-Professor Humor Less\\
-Professor Ironic Name\\
-Professor Cirius Thinker\\
+Professor Vineet Bafna\\
+Professor Pavel Pevzner\\
 }
  \ifnum\pdfstrcmp{\@degree}{masters}=0 %
     \numberofmembers{3} % |chair| + |cochair| + |othermembers|
@@ -53,64 +52,6 @@ Professor Cirius Thinker\\
 %
 \makefrontmatter
 
-%% DEDICATION
-%
-%  You have three choices here:
-%    1. Use the ``dedication'' environment.
-%       Put in the text you want, and everything will be formated for
-%       you. You'll get a perfectly respectable dedication page.
-%
-%
-%    2. Use the ``mydedication'' environment.  If you don't like the
-%       formatting of option 1, use this environment and format things
-%       however you wish.
-%
-%    3. If you don't want a dedication, it's not required.
-%
-%
-\begin{dedication}
-  To two, the loneliest number since the number one.
-\end{dedication}
-
-
-% \begin{mydedication} % You are responsible for formatting here.
-%   \vspace{1in}
-%   \begin{flushleft}
-% 	To me.
-%   \end{flushleft}
-%
-%   \vspace{2in}
-%   \begin{center}
-% 	And you.
-%   \end{center}
-%
-%   \vspace{2in}
-%   \begin{flushright}
-% 	Which equals us.
-%   \end{flushright}
-% \end{mydedication}
-
-
-
-%% EPIGRAPH
-%
-%  The same choices that applied to the dedication apply here.
-%
-\begin{epigraph} % The style file will position the text for you.
-  \emph{A careful quotation\\
-  conveys brilliance.}\\
-  ---Smarty Pants
-\end{epigraph}
-
-% \begin{myepigraph} % You position the text yourself.
-%   \vfil
-%   \begin{center}
-%     {\bf Think! It ain't illegal yet.}
-%
-% 	\emph{---George Clinton}
-%   \end{center}
-% \end{myepigraph}
-
 
 %% SETUP THE TABLE OF CONTENTS
 %
@@ -119,51 +60,13 @@ Professor Cirius Thinker\\
 \listoftables   % Comment if you don't have any tables
 
 
-
-%% ACKNOWLEDGEMENTS
-%
-%  While technically optional, you probably have someone to thank.
-%  Also, a paragraph acknowledging all coauthors and publishers (if
-%  you have any) is required in the acknowledgements page and as the
-%  last paragraph of text at the end of each respective chapter. See
-%  the OGS Formatting Manual for more information.
-%
-\begin{acknowledgements}
- Thanks to whoever deserves credit for Blacks Beach, Porters Pub, and
- every coffee shop in San Diego.
-
- Thanks also to hottubs.
-\end{acknowledgements}
-
-
-%% VITA
-%
-%  A brief vita is required in a doctoral thesis. See the OGS
-%  Formatting Manual for more information.
-%
-% Vita is optional for masters thesis; we exclude it here.
-%
- \ifnum\pdfstrcmp{\@degree}{phd}=0 %
-    \begin{vitapage}
-    \begin{vita}
-      \item[2002] B.~S. in Mathematics \emph{cum laude}, University of Southern North Dakota, Hoople
-      \item[2002-2007] Graduate Teaching Assistant, University of California, San Diego
-      \item[2007] Ph.~D. in Mathematics, University of California, San Diego
-    \end{vita}
-    \begin{publications}
-      \item Your Name, ``A Simple Proof Of The Riemann Hypothesis'', \emph{Annals of Math}, 314, 2007.
-      \item Your Name, Euclid, ``There Are Lots Of Prime Numbers'', \emph{Journal of Primes}, 1, 300 B.C.
-    \end{publications}
-    \end{vitapage}
-\fi
-
 %% ABSTRACT
 %
 %  Doctoral dissertation / thesis abstracts should not exceed 350 words.
 %   The abstract may continue to a second page if necessary.
 %
 \begin{abstract}
-  This \MakeLowercase{\doctype} will be abstract.
+Adaptive Laboratory Evolution (ALE) is a tool for studying biological molecular mechanisms and evolutionary dynamics through coupling to whole genome sequencing. Academic and industrial labs involved in the study of microbial evolution and metabolic engineering use ALE methodologies in their research for exploring adaptive mutations \cite{ASM:/content/journal/microbe/10.1128/microbe.6.69.1}. These labs build custom computational pipelines for the analysis of the ALE genomic output, though ALE methodologies often include the same fundamental steps to interrogate the evolutionary trajectory of the organisms under study. This thesis will detail the strategies and computational tools used in the ALE project pipeline executed by UCSD's Systems Biology Research Group (SBRG) and describe a system for compiling and analyzing ALE results. This thesis can contribute to the domain of ALE methodologies by detailing an approach to the computational analysis of ALE experiments, will propose a method for hypothesizing key mutations potentially correlated with the ALE experiment controls and will explore global trends for all ALE experiment data accumulated. These computational tools and protocols to identifying key mutations and global trends will be leveraged, implemented and evaluated in our ALE Analytics software pipeline and web platform. We therefore hypothesize that we can leverage existing ALE foundational technologies and methodologies to develop a bioinformatics system that will accurately predict the key mutations of ALE experiments and provide context on global mutational trends and correlated experimental conditions.
 \end{abstract}
 
 
