Update on Overleaf.

--- a/template.bib
+++ b/template.bib
@@ -93,3 +93,137 @@
     school = "University of California, San Diego",
     year = "2016",
 }
+
+@article{Kobayashi01011990,
+author = {Kobayashi, Makoto and Nagata, Kyosuke and Ishihama, Akira}, 
+title = {Promoter selectivity of Escherichia coli RNA polymerase: effect of base substitutions in the promoter −35 region on promoter strength},
+volume = {18}, 
+number = {24}, 
+pages = {7367-7372}, 
+year = {1990}, 
+doi = {10.1093/nar/18.24.7367},  
+URL = {http://nar.oxfordjournals.org/content/18/24/7367.abstract}, 
+eprint = {http://nar.oxfordjournals.org/content/18/24/7367.full.pdf+html}, 
+journal = {Nucleic Acids Research} 
+}
+
+@article{AYERS1989749,
+title = "Promoter recognition by Escherichia coli RNA polymerase",
+journal = "Journal of Molecular Biology",
+volume = "207",
+number = "4",
+pages = "749 - 756",
+year = "1989",
+note = "",
+issn = "0022-2836",
+doi = "http://dx.doi.org/10.1016/0022-2836(89)90241-6",
+url = "http://www.sciencedirect.com/science/article/pii/0022283689902416",
+author = "Deborah G. Ayers and David T. Auble and Pieter L. deHaseth"
+}
+
+@Article{Cheng2014,
+author={Cheng, Kian-Kai
+and Lee, Baek-Seok
+and Masuda, Takeshi
+and Ito, Takuro
+and Ikeda, Kazutaka
+and Hirayama, Akiyoshi
+and Deng, Lingli
+and Dong, Jiyang
+and Shimizu, Kazuyuki
+and Soga, Tomoyoshi
+and Tomita, Masaru
+and Palsson, Bernhard O.
+and Robert, Martin},
+title={Global metabolic network reorganization by adaptive mutations allows fast growth of Escherichia coli on glycerol},
+journal={Nature Communications},
+year={2014},
+month={Jan},
+day={31},
+publisher={Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved. SN  -},
+volume={5},
+pages={3233 EP  -},
+note={Article},
+url={http://dx.doi.org/10.1038/ncomms4233}
+}
+
+@article {Wang1445,
+	author = {Wang, Wenqin and Li, Gene-Wei and Chen, Chongyi and Xie, X. Sunney and Zhuang, Xiaowei},
+	title = {Chromosome Organization by a Nucleoid-Associated Protein in Live Bacteria},
+	volume = {333},
+	number = {6048},
+	pages = {1445--1449},
+	year = {2011},
+	doi = {10.1126/science.1204697},
+	publisher = {American Association for the Advancement of Science},
+	abstract = {Bacterial chromosomes are confined in submicrometer-sized nucleoids. Chromosome organization is facilitated by nucleoid-associated proteins (NAPs), but the mechanisms of action remain elusive. In this work, we used super-resolution fluorescence microscopy, in combination with a chromosome-conformation capture assay, to study the distributions of major NAPs in live Escherichia coli cells. Four NAPs{\textemdash}HU, Fis, IHF, and StpA{\textemdash}were largely scattered throughout the nucleoid. In contrast, H-NS, a global transcriptional silencer, formed two compact clusters per chromosome, driven by oligomerization of DNA-bound H-NS through interactions mediated by the amino-terminal domain of the protein. H-NS sequestered the regulated operons into these clusters and juxtaposed numerous DNA segments broadly distributed throughout the chromosome. Deleting H-NS led to substantial chromosome reorganization. These observations demonstrate that H-NS plays a key role in global chromosome organization in bacteria.},
+	issn = {0036-8075},
+	URL = {http://science.sciencemag.org/content/333/6048/1445},
+	eprint = {http://science.sciencemag.org/content/333/6048/1445.full.pdf},
+	journal = {Science}
+}
+
+@Article{Conrad2009,
+author="Conrad, Tom M.
+and Joyce, Andrew R.
+and Applebee, M. Kenyon
+and Barrett, Christian L.
+and Xie, Bin
+and Gao, Yuan
+and Palsson, Bernhard {\O}",
+title="Whole-genome resequencing of Escherichia coli K-12 MG1655 undergoing short-term laboratory evolution in lactate minimal media reveals flexible selection of adaptive mutations",
+journal="Genome Biology",
+year="2009",
+volume="10",
+number="10",
+pages="R118",
+abstract="Short-term laboratory evolution of bacteria followed by genomic sequencing provides insight into the mechanism of adaptive evolution, such as the number of mutations needed for adaptation, genotype-phenotype relationships, and the reproducibility of adaptive outcomes.",
+issn="1474-760X",
+doi="10.1186/gb-2009-10-10-r118",
+url="http://dx.doi.org/10.1186/gb-2009-10-10-r118"
+}
+
+@article{Woods13062006,
+author = {Woods, Robert and Schneider, Dominique and Winkworth, Cynthia L. and Riley, Margaret A. and Lenski, Richard E.}, 
+title = {Tests of parallel molecular evolution in a long-term experiment with Escherichia coli},
+volume = {103}, 
+number = {24}, 
+pages = {9107-9112}, 
+year = {2006}, 
+doi = {10.1073/pnas.0602917103}, 
+abstract ={The repeatability of evolutionary change is difficult to quantify because only a single outcome can usually be observed for any precise set of circumstances. In this study, however, we have quantified the frequency of parallel and divergent genetic changes in 12 initially identical populations of Escherichia coli that evolved in identical environments for 20,000 cell generations. Unlike previous analyses in which candidate genes were identified based on parallel phenotypic changes, here we sequenced four loci (pykF, nadR, pbpA-rodA, and hokB/sokB) in which mutations of unknown effect had been discovered in one population, and then we compared the substitution pattern in these “blind” candidate genes with the pattern found in 36 randomly chosen genes. Two candidate genes, pykF and nadR, had substitutions in all 11 other populations, and the other 2 in several populations. There were very few cases, however, in which the exact same mutations were substituted, in contrast to the findings from conceptually related work performed with evolving virus populations. No random genes had any substitutions except in four populations that evolved defects in DNA repair. Tests of four different statistical aspects of the pattern of molecular evolution all indicate that adaptation by natural selection drove the parallel changes in these candidate genes.}, 
+URL = {http://www.pnas.org/content/103/24/9107.abstract}, 
+eprint = {http://www.pnas.org/content/103/24/9107.full.pdf}, 
+journal = {Proceedings of the National Academy of Sciences} 
+}
+
+@article{10.1371/journal.pgen.1001164,
+    author = {Kishimoto, Toshihiko AND Iijima, Leo AND Tatsumi, Makoto AND Ono, Naoaki AND Oyake, Ayana AND Hashimoto, Tomomi AND Matsuo, Moe AND Okubo, Masato AND Suzuki, Shingo AND Mori, Kotaro AND Kashiwagi, Akiko AND Furusawa, Chikara AND Ying, Bei-Wen AND Yomo, Tetsuya},
+    journal = {PLoS Genet},
+    publisher = {Public Library of Science},
+    title = {Transition from Positive to Neutral in Mutation Fixation along with Continuing Rising Fitness in Thermal Adaptive Evolution},
+    year = {2010},
+    month = {10},
+    volume = {6},
+    url = {http://dx.doi.org/10.1371%2Fjournal.pgen.1001164},
+    pages = {1-10},
+    abstract = {<title>Author Summary</title>
+<p>The detailed results of a two-year <italic>in vitro</italic> thermal adaptive evolution experiment are described. A laboratory-evolved <italic>E. coli</italic> strain with an improved upper temperature limit, as high as 45.9°C, was acquired after 523 days of serial transfer, equivalent to 7,560 generations, in nutrient-limited medium. The complete daily records of cell growth exhibited universal two-phase fitness dynamics, a rapid growth recovery phase followed by a gradual increasing growth phase, throughout the entire evolutionary process. Genome-sequence analysis not only showed considerable escalation of the spontaneous substitution rate, but also revealed the transition from positive to nearly neutral in mutation fixation. Particularly, even with the rising fitness of bacterial cells, neutrality was observed in molecular evolution. These observations suggested that a discrete evolutionary mode occurred in the continuous evolutionary route, linking Darwinian adaptive selection with Kimura's neutral evolution. Such transition from beneficial to neutral path may be adopted as an evolutionary strategy robust to rigorous environmental changes.</p>
+},
+    number = {10},
+    doi = {10.1371/journal.pgen.1001164}
+}
+
+@article{Blank25022014,
+author = {Blank, Diana and Wolf, Luise and Ackermann, Martin and Silander, Olin K.}, 
+title = {The predictability of molecular evolution during functional innovation},
+volume = {111}, 
+number = {8}, 
+pages = {3044-3049}, 
+year = {2014}, 
+doi = {10.1073/pnas.1318797111}, 
+abstract ={Determining the molecular changes that give rise to functional innovations is a major unresolved problem in biology. The paucity of examples has served as a significant hindrance in furthering our understanding of this process. Here we used experimental evolution with the bacterium Escherichia coli to quantify the molecular changes underlying functional innovation in 68 independent instances ranging over 22 different metabolic functions. Using whole-genome sequencing, we show that the relative contribution of regulatory and structural mutations depends on the cellular context of the metabolic function. In addition, we find that regulatory mutations affect genes that act in pathways relevant to the novel function, whereas structural mutations affect genes that act in unrelated pathways. Finally, we use population genetic modeling to show that the relative contributions of regulatory and structural mutations during functional innovation may be affected by population size. These results provide a predictive framework for the molecular basis of evolutionary innovation, which is essential for anticipating future evolutionary trajectories in the face of rapid environmental change.}, 
+URL = {http://www.pnas.org/content/111/8/3044.abstract}, 
+eprint = {http://www.pnas.org/content/111/8/3044.full.pdf}, 
+journal = {Proceedings of the National Academy of Sciences} 
+}
