Update on Overleaf.

--- a/template.bib
+++ b/template.bib
@@ -227,3 +227,19 @@ URL = {http://www.pnas.org/content/111/8/3044.abstract},
 eprint = {http://www.pnas.org/content/111/8/3044.full.pdf}, 
 journal = {Proceedings of the National Academy of Sciences} 
 }
+
+@article {Margolis957,
+	author = {Margolis, Ronald and Derr, Leslie and Dunn, Michelle and Huerta, Michael and Larkin, Jennie and Sheehan, Jerry and Guyer, Mark and Green, Eric D},
+	title = {The National Institutes of Health{\textquoteright}s Big Data to Knowledge (BD2K) initiative: capitalizing on biomedical big data},
+	volume = {21},
+	number = {6},
+	pages = {957--958},
+	year = {2014},
+	doi = {10.1136/amiajnl-2014-002974},
+	publisher = {The Oxford University Press},
+	abstract = {Biomedical research has and will continue to generate large amounts of data (termed {\textquoteleft}big data{\textquoteright}) in many formats and at all levels. Consequently, there is an increasing need to better understand and mine the data to further knowledge and foster new discovery. The National Institutes of Health (NIH) has initiated a Big Data to Knowledge (BD2K) initiative to maximize the use of biomedical big data. BD2K seeks to better define how to extract value from the data, both for the individual investigator and the overall research community, create the analytic tools needed to enhance utility of the data, provide the next generation of trained personnel, and develop data science concepts and tools that can be made available to all stakeholders.},
+	issn = {1067-5027},
+	URL = {http://jamia.oxfordjournals.org/content/21/6/957},
+	eprint = {http://jamia.oxfordjournals.org/content/21/6/957.full.pdf},
+	journal = {Journal of the American Medical Informatics Association}
+}
