Update on Overleaf.

--- a/template.bib
+++ b/template.bib
@@ -57,7 +57,7 @@
 
 @Article{pmid25015645,
    Author="Sandberg, T. E.  and Pedersen, M.  and LaCroix, R. A.  and Ebrahim, A.  and Bonde, M.  and Herrgard, M. J.  and Palsson, B. O.  and Sommer, M.  and Feist, A. M. ",
-   Title="{{E}volution of {E}scherichia coli to 42 °{C} and subsequent genetic engineering reveals adaptive mechanisms and novel mutations}",
+   Title="{{E}volution of {E}scherichia coli to 42 $^{\circ}${C} and subsequent genetic engineering reveals adaptive mechanisms and novel mutations}",
    Journal="Mol. Biol. Evol.",
    Year="2014",
    Volume="31",
@@ -242,4 +242,14 @@ journal = {Proceedings of the National Academy of Sciences}
 	URL = {http://jamia.oxfordjournals.org/content/21/6/957},
 	eprint = {http://jamia.oxfordjournals.org/content/21/6/957.full.pdf},
 	journal = {Journal of the American Medical Informatics Association}
+}
+
+@misc{michael_p_schroeder_2015_14561,
+  author       = {Michael P Schroeder and
+                  Núria Lopez-Bigas},
+  title        = {muts-needle-plot: Mutations Needle Plot v0.8.0},
+  month        = jan,
+  year         = 2015,
+  doi          = {10.5281/zenodo.14561},
+  url          = {https://doi.org/10.5281/zenodo.14561}
 }
