Update on Overleaf.

--- a/template.bib
+++ b/template.bib
@@ -253,3 +253,54 @@ journal = {Proceedings of the National Academy of Sciences}
   doi          = {10.5281/zenodo.14561},
   url          = {https://doi.org/10.5281/zenodo.14561}
 }
+
+@misc{django,
+  title        = {Django (Version 1.9.0): {Web Framework}},
+  year         = 2016,
+  howpublished          = {\url{https://djangoproject.com}}
+}
+
+@article{nginx,
+    abstract = {{A leaner, meaner Apache.}},
+    address = {Houston, TX},
+    author = {Reese, Will},
+    citeulike-article-id = {10563605},
+    citeulike-linkout-0 = {http://portal.acm.org/citation.cfm?id=1412202.1412204},
+    issn = {1075-3583},
+    journal = {Linux J.},
+    month = sep,
+    number = {173},
+    posted-at = {2012-04-14 02:23:06},
+    priority = {2},
+    publisher = {Belltown Media},
+    title = {{Nginx: the high-performance web server and reverse proxy}},
+    url = {http://portal.acm.org/citation.cfm?id=1412202.1412204},
+    volume = {2008},
+    year = {2008}
+}
+
+
+@Article{Conrad2011,
+author={Conrad, Tom M.
+and Lewis, Nathan E.
+and Palsson, Bernhard {\O}},
+title={Microbial laboratory evolution in the era of genome-scale science},
+journal={Mol Syst Biol},
+year={2011},
+month={Jul},
+day={05},
+publisher={Nature Publishing Group},
+volume={7},
+pages={509-509},
+abstract={Advances in DNA sequencing, high-throughput technologies, and genetic manipulation systems have enabled empirical studies of the molecular and genomic bases of adaptive evolution. This review discusses key insights learned from direct observation of the evolution process.},
+note={21734648[pmid]},
+issn={1744-4292},
+doi={10.1038/msb.2011.42},
+url={http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3159978/}
+}
+
+@unpublished{l-serine,
+author = "Mundhada, Hemanshu  and Miguel, Jose S and Schneider, Konstantin and Koza, Anna and Christensen, Hanne B and Klein, Tobias and Phaneuf, Patrick V and Herrgard, Markus and Feist, Adam",
+title = "Increased production of L-serine in Escherichia coli through Adaptive Laboratory Evolution",
+note = "Submitted",
+}
