Update on Overleaf.

--- a/template.tex
+++ b/template.tex
@@ -329,7 +329,7 @@ To reduce the effort in generating consistent ALE experiment mutation lineage re
 % TODO: Speak towards the fact that we're handling issues with accuracy, consistency and the ability to automatically amend results with new protocols.
 %
 % ^.
-The many methods of identifying an ALE experiment's key mutations will be defined and automated; their results will be presented by the reporting features alongside the mutation lineage reports.
+The common methods of identifying an ALE experiment's key mutations will be defined and automated; their results will be presented by the reporting features alongside the mutation lineage reports.
 
 %The most immediate significant impact will be with building a software platform that will automate the organization and report generation for ALE experiments. SBRG researchers can spend weeks manually organizing mutational data in order to identify mutations \textit{significant} to the evolutions of a strain in an ALE experiment. This manual investigation is also prone to human error, where researchers may overlook significant mutations. The resolution on the mutational information from an ALE experiment is also limited by the time cost for manually curating mutational lineages; automating this curation allows for researchers to incorporate more sample sequencing data into their investigation to establish more resolution on mutational trends in their experimental evolutions.
 
