Update on Overleaf.

--- a/template.bib
+++ b/template.bib
@@ -9,7 +9,7 @@
 	title = {Identification of mutations in laboratory-evolved microbes from next-generation sequencing data using breseq},
 	issn = {1151},
 	journal = {Methods Mol. Biol},
-	author = {Deatherage, D.E., Barrick, J.E.},
+	author = {Deatherage, D.E. AND Barrick, J.E.},
 	year = {2014},
 	pages = {165--188}
 }
@@ -18,25 +18,21 @@
    author = "Palsson, B",
    title = "Adaptive Laboratory Evolution",
    journal = "Microbe Magazine",
-   year = "",
+   year = "2011",
    url = "http://www.asmscience.org/content/journal/microbe/10.1128/microbe.6.69.1"
 }
 
-@ONLINE{Andrew:2010:Online,
+@Online{Andrew,
    author = "Andrews, S.",
    title = "FastQC: a quality control tool for high throughput sequence data",
-   year =  {2010}
+   year =  {2010},
    url = "http://www.bioinformatics.babraham.ac.uk/projects/fastqc"   
 }
 
-@ONLINE{FASTX-Toolkit,
+@Online{FASTX-Toolkit,
     author = {Lab, Hannon},
-    citeulike-article-id = {9103573},
-    citeulike-linkout-0 = {http://hannonlab.cshl.edu/fastx_toolkit/},
     journal = {http://hannonlab.cshl.edu/fastx_toolkit/index.html},
-    keywords = {ebv, seq},
     posted-at = {2011-04-06 05:16:38},
-    priority = {2},
     title = {{FASTX Toolkit}},
     url = {http://hannonlab.cshl.edu/fastx_toolkit/}
 }
@@ -96,7 +92,7 @@
 
 @article{Kobayashi01011990,
 author = {Kobayashi, Makoto and Nagata, Kyosuke and Ishihama, Akira}, 
-title = {Promoter selectivity of Escherichia coli RNA polymerase: effect of base substitutions in the promoter −35 region on promoter strength},
+title = {Promoter selectivity of Escherichia coli RNA polymerase: effect of base substitutions in the promoter -35 region on promoter strength},
 volume = {18}, 
 number = {24}, 
 pages = {7367-7372}, 
@@ -245,8 +241,7 @@ journal = {Proceedings of the National Academy of Sciences}
 }
 
 @misc{michael_p_schroeder_2015_14561,
-  author       = {Michael P Schroeder and
-                  Núria Lopez-Bigas},
+  author       = {Michael P Schroeder and Nuria Lopez-Bigas},
   title        = {muts-needle-plot: Mutations Needle Plot v0.8.0},
   month        = jan,
   year         = 2015,
@@ -303,4 +298,28 @@ url={http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3159978/}
 author = "Mundhada, Hemanshu  and Miguel, Jose S and Schneider, Konstantin and Koza, Anna and Christensen, Hanne B and Klein, Tobias and Phaneuf, Patrick V and Herrgard, Markus and Feist, Adam",
 title = "Increased production of L-serine in Escherichia coli through Adaptive Laboratory Evolution",
 note = "Submitted",
+}
+
+
+@Article{Head2014,
+author={Head, Steven R.
+and Komori, H. Kiyomi
+and LaMere, Sarah A.
+and Whisenant, Thomas
+and Van Nieuwerburgh, Filip
+and Salomon, Daniel R.
+and Ordoukhanian, Phillip},
+title={Library construction for next-generation sequencing: Overviews and challenges},
+journal={Biotechniques},
+year={2014},
+month={Feb},
+day={01},
+volume={56},
+number={2},
+pages={61-passim},
+abstract={High-throughput sequencing, also known as next-generation sequencing (NGS), has revolutionized genomic research. In recent years, NGS technology has steadily improved, with costs dropping and the number and range of sequencing applications increasing exponentially. Here, we examine the critical role of sequencing library quality and consider important challenges when preparing NGS libraries from DNA and RNA sources. Factors such as the quantity and physical characteristics of the RNA or DNA source material as well as the desired application (i.e., genome sequencing, targeted sequencing, RNA-seq, ChIP-seq, RIP-seq, and methylation) are addressed in the context of preparing high quality sequencing libraries. In addition, the current methods for preparing NGS libraries from single cells are also discussed.},
+note={24502796[pmid]},
+issn={0736-6205},
+doi={10.2144/000114133},
+url={http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4351865/}
 }
