--- a/template.tex
+++ b/template.tex
@@ -319,7 +319,7 @@ ALE experiments often involve multiple experimentalists and collaborators. The i
 
 \subsection{Experiment Analysis Effort, Consistency and Accuracy}
 
-The issues of data consolidation with larger scale experiment also manifest with the analysis of the experiment results. The key mutation analysis of experiments may be inconsistent between investigators. Key mutations may be excluded from the analysis of the results depending on the amount of experience of an ALE experimentalist. Different methods of reporting experiment results may be used between experimentalists, therefore making the comparison of different ALE experiments more difficult.
+The issues of data consolidation with larger scale experiments also manifest with the analysis of the experiment results. The key mutation analysis of experiments may be inconsistent between investigators. Key mutations may be excluded from the analysis of the results depending on the amount of experience of an ALE experimentalist. Different methods of reporting experiment results may be used between experimentalists, therefore making the comparison of different ALE experiments more difficult.
 
 
 \section{Specific Aims}
