--- a/template.tex
+++ b/template.tex
@@ -360,7 +360,7 @@ We have established a post-processing protocol for the quality control of the se
 %
 % ^.
 
-The protocol first requires that the reads for all sequenced ALE samples are inspected for their \textit{per base sequence quality} and \textit{per base sequence content} using FastQC. The per base sequence quality report presents the cumulative quality score of the bases in specific read positions as having good, reasonable or bad quality. From these results, we can understand which 3' and 5' read end positions have the lowest cumulative quality and trim these positions out using the FASTX-Toolkit. We additionally inspect the per base sequence content for any abnormalities such as the biasing for particular bases in specific positions. In a random set of sequenced reads, you would expect that each read position has approximately equal counts of each base, though in our more recent samples, we often experience a biasing of base types in the first 17 positions and the final 25 positions of each read. At this point, we additionally noticed that many alignment artifacts being identified as mutations in our subsequent variant calling were located in these read regions. This base type biasing is likely due to the sequencing library preparation chemistry that inherits an intrinsic DNA fragmentation sequence bias \cite{Head2014}. Though this bias does occur, it should theoretically not result in inappropriate base calling. Even so, trimming these biased regions out of our reads has lead to less mutation calling due to sporadic non-consensus bases. The process of quality inspection and trimming may iterate multiple times before moving on. Once the reads report acceptable quality, Breseq is used to align each sample's reads to a reference genome and identify mutations. In addition to mutations, Breseq reports return the alignment statistics of \textit{mean coverage} and \textit{mapped read} count. In combination with the amount of \textit{unassigned missing coverage} evidence, regions where no reads could be aligned to the reference, these statistics are used to evaluation the alignment performance, where we compare each statistic and unassigned missing coverage artifact count to an empirically derived threshold. If the mean coverage or mapped read values fall below our thresholds or the unassigned missing coverage artifact count exceeds our thresholds, we consider the sequencing library of the sample they belong to as potentially problematic in our analysis of the evolution and may again sequence the sample or discard them from the analysis.
+The protocol first requires that the reads for all sequenced ALE samples are inspected for their \textit{per base sequence quality} and \textit{per base sequence content} using FastQC. The per base sequence quality report presents the cumulative quality score of the bases in specific read positions as having good, reasonable or bad quality. From these results, we can understand which 3' and 5' read end positions have the lowest cumulative quality and trim these positions out using the FASTX-Toolkit. We additionally inspect the per base sequence content for any abnormalities such as the biasing for particular bases in specific positions. In a random set of sequenced reads, you would expect that each read position has approximately equal counts of each base, though in our more recent samples, we often experience a biasing of base types in the first 17 positions and the final 25 positions of each read. At this point, we additionally noticed that many alignment artifacts being identified as mutations in our subsequent variant calling were located in these read regions. This base type biasing is likely due to the sequencing library preparation chemistry that inherits an intrinsic DNA fragmentation sequence bias \cite{Head2014}. Though this bias does occur, it should theoretically not result in inappropriate base calling. Even so, trimming these biased regions out of our reads has lead to less mutation calling due to sporadic non-consensus bases. The process of quality inspection and trimming may iterate multiple times before moving on. Once the reads report acceptable quality, Breseq is used to align each sample's reads to a reference genome and identify mutations. In addition to mutations, Breseq reports return the alignment statistics of \textit{mean coverage} and \textit{mapped read} count. In combination with the amount of \textit{unassigned missing coverage} evidence, regions where no reads could be aligned to the reference, these statistics are used to evaluate the alignment performance, where we compare each statistic and unassigned missing coverage artifact count to an empirically derived threshold. If the mean coverage or mapped read values fall below our thresholds or the unassigned missing coverage artifact count exceeds our thresholds, we consider the sequencing library of the sample they belong to as potentially problematic in our analysis of the evolution and may again sequence the sample or discard them from the analysis.
 
 Besides the actual generation of mutation data, the key functionality of our post-processing protocol is the stage dependent feedback provided. This feedback offers the opportunity for experimental protocol and data acquisition refinement that can be acted on by the many individuals involved in the sample preparation and processing pipeline.
 
