--- a/template.tex
+++ b/template.tex
@@ -643,7 +643,7 @@ The second was to identify genomic regions within an ALE that experienced the re
   \includegraphics[width=\textwidth]{glu_new_enrich_fix_muts.png}
   \label{tab:glu_new_enrich_fix_muts}
 \end{table}
-The ALE Analytics enrichment key mutation analysis finds all 8 of the genomic regions affected by the published key mutations. This analysis also finds 15 additional possible significant genomic regions, described in Table \ref{tab:glu_new_enrich_fix_muts}, due to the frequency in which a many mutations reoccurred within an ALE. The ALE Analytics fixed key mutation analysis finds 14 unpublished key mutations. The ascending frequency fixed mutation analysis finds the same results. The subset of unpublished fixed mutations are identical to the subset of unpublished enrichment mutations, with the exception of \textit{wecA}. The \textit{wecA} alleles do manifest in such a way that conforms to the key mutation protocol published for this ALE experiment, though were not included in the paper's key mutation results. Besides the \textit{wecA} alleles, the new key mutations were not published by the authors as being significant since they did not exhibit the criteria of mutating the same genomic region in more than one ALE or replacing a mutation within an ALE. Though the new key mutation genomic regions contributed to the lessening of the enrichment and fixed key mutation analysis' precision metric, they present an opportunity for identifying further significant adaptations not identified by the authors.
+The ALE Analytics enrichment key mutation analysis finds all 8 of the genomic regions affected by the published key mutations. This analysis also finds 15 additional possible significant genomic regions, described in Table \ref{tab:glu_new_enrich_fix_muts}, due to the frequency in which many mutations reoccurred within an ALE. The ALE Analytics fixed key mutation analysis finds 14 unpublished key mutations. The ascending frequency fixed mutation analysis finds the same results. The subset of unpublished fixed mutations are identical to the subset of unpublished enrichment mutations, with the exception of \textit{wecA}. The \textit{wecA} alleles do manifest in such a way that conforms to the key mutation protocol published for this ALE experiment, though were not included in the paper's key mutation results. Besides the \textit{wecA} alleles, the new key mutations were not published by the authors as being significant since they did not exhibit the criteria of mutating the same genomic region in more than one ALE or replacing a mutation within an ALE. Though the new key mutation genomic regions contributed to the lessening of the enrichment and fixed key mutation analysis' precision metric, they present an opportunity for identifying further significant adaptations not identified by the authors.
 \begin{table}[H]
   \centering
   \caption{The GLU ALE experiment {key mutation} genomic region matching summary between the paper and the ALE Analytics automated key mutation analysis.}
